tests/ui/builtin-superkinds/builtin-superkinds-self-type.stderr
error[E0310]: the parameter type `T` may not live long enough
  --> $DIR/builtin-superkinds-self-type.rs:10:16
   |
LL | impl <T: Sync> Foo for T { }
   |                ^^^
   |                |
   |                the parameter type `T` must be valid for the static lifetime...
   |                ...so that the type `T` will meet its required lifetime bounds...
   |
note: ...that is required by this bound
  --> $DIR/builtin-superkinds-self-type.rs:6:24
   |
LL | trait Foo : Sized+Sync+'static {
   |                        ^^^^^^^
help: consider adding an explicit lifetime bound
   |
LL | impl <T: Sync + 'static> Foo for T { }
   |               +++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0310`.
